--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
